# aito-accounting-demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  do  ledger-pro-demo.html  pyproject.toml  requirements.txt  shell.nix
assets/: teaser.html
book/: test_01_data_sanity.py  test_02_predict.py  test_03_relate.py  test_04_match.py  test_05_evaluate.py  test_06_template_and_log.py  test_07_help.py  test_08_performance.py  test_anomaly.py  test_evaluate_matching.py  test_match.py  test_match_strategies.py  test_match_with_amount.py  test_predict.py  test_relate.py
books/: index.md
data/: dedupe_precompute_entries.py  fetch_companies.py  generate_fixtures.py  generate_help.py  precompute_predictions.py
docs/: BACKLOG.md  aito-cheatsheet.md  aito-workbook-instructions-aito-accounting-demo.md  demo-script.md  deploy-azure.md  migration.md  product-sheet.typ  sizing.md
frontend/: next.config.ts  package-lock.json  package.json
scripts/: warm_cache.py
src/: aito_client.py  anomaly_service.py  app.py  cache.py  config.py  data_loader.py  date_window.py  evaluation_service.py  formfill_service.py  help_service.py  invoice_service.py  matching_service.py  multitenancy_service.py  precompute_store.py  precomputed.py  quality_service.py  rate_limit.py  rulemining_service.py
tests/: test_aito_client.py  test_aito_live.py  test_anomaly_service.py  test_config.py  test_date_window.py  test_formfill_service.py  test_invoice_service.py  test_matching_service.py  test_precomputed.py  test_quality_service.py  test_rulemining_service.py
(+329 files in other folders)
